2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-09-20 Christophe Demko <chdemko@gmail.com>
	* build.xml
		+ Add -Xlint for tests 

2014-09-20 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/lattice/ArrowRelation.java
		^ Use static fields 

2014-09-20 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/lattice/Rule.java
		- Remove useless parenthesis

2014-09-13 Christophe Demko <chdemko@gmail.com>
	* build.xml
	* src/fr/kbertet/dgraph/io/DGraphWriterDot.java
	* test/fr/kbertet/dgraph/io/DGraphWriterFactoryTest.java
	* test/fr/kbertet/dgraph/io/package-info.java
		+ Add unit tests

2014-09-13 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/dgraph/Edge.java
	* src/fr/kbertet/dgraph/Node.java
	* test/fr/kbertet/dgraph/NodeTest.java
		^ Simplify code

2014-09-13 Christophe Demko <chdemko@gmail.com>
	* All .java files
		^ Changing copyright

2014-09-12 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/dgraph/DGraph.java
		^ Removing some warnings when compile with -Xlint

2014-09-12 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/dgraph/DGraph.java
		^ Simplify copy method

2014-09-12 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/dgraph/Node.java
	* test/fr/kbertet/dgraph/NodeTest.java
		^ Remove tokenizer for Node.toString

2014-09-05 Jean-François Viaud <jviaud@univ-lr.fr>
	* src/fr/kberte/lattice/Context.java
		^ change names : arrowClosedObject, arrowClosedAttribute

2014-09-01 Jean-François Viaud <jviaud@univ-lr.fr>
	* src/fr/kbertet/lattice/Lattice.iuml
	* src/fr/kbertet/lattice/Lattice.java
		^ added joinClosure, meetClosure, fullClosure and hybridGenerators methods
	* test/fr/kbertet/lattice/LatticeTest.java
