@@ -56,8 +56,8 @@ package fr.kbertet.dgraph {
         +int reflexiveReduction()
         +int reflexiveClosure()
         +int transitiveClosure()
-        +ArrayList<Node>[] depthFirstSearch(Node source, TreeSet<Node> visited, ArrayList<Node> sort)
-        +ArrayList<Node>[] depthFirstSearch()
+        -ArrayList<Node>[] depthFirstSearch(Node source, TreeSet<Node> visited, ArrayList<Node> sort)
+        -ArrayList<Node>[] depthFirstSearch()
         +void transpose()
         +DAGraph getStronglyConnectedComponent()
     }
